--- a/src/css/tiptap.module.scss
+++ b/src/css/tiptap.module.scss
@@ -45,7 +45,7 @@
     }
 
     pre {
-        background: #0d0d0d;
+        background: rgba(47, 47, 47, 255);
         color: #fff;
         font-family: "JetBrainsMono", monospace;
         padding: 0.75rem 1rem;
